--- a/signup.html
+++ b/signup.html
@@ -1,32 +1,64 @@
-<!DOCTYPE html>
+<script type="text/javascript">
+        var gk_isXlsx = false;
+        var gk_xlsxFileLookup = {};
+        var gk_fileData = {};
+        function filledCell(cell) {
+          return cell !== '' && cell != null;
+        }
+        function loadFileData(filename) {
+        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
+            try {
+                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
+                var firstSheetName = workbook.SheetNames[0];
+                var worksheet = workbook.Sheets[firstSheetName];
+
+                // Convert sheet to JSON to filter blank rows
+                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
+                // Filter out blank rows (rows where all cells are empty, null, or undefined)
+                var filteredData = jsonData.filter(row => row.some(filledCell));
+
+                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
+                var headerRowIndex = filteredData.findIndex((row, index) =>
+                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
+                );
+                // Fallback
+                if (headerRowIndex === -1 || headerRowIndex > 25) {
+                  headerRowIndex = 0;
+                }
+
+                // Convert filtered JSON back to CSV
+                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
+                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
+                return csv;
+            } catch (e) {
+                console.error(e);
+                return "";
+            }
+        }
+        return gk_fileData[filename] || "";
+        }
+        </script><!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Cadastro</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cadastro - SouTaxi</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-white flex items-center justify-center h-screen p-4">
-  <div class="w-full max-w-sm space-y-6">
-    <img src="logo.webp" alt="SouTaxi" class="mx-auto w-32" />
-    <form id="signup-form" class="space-y-4">
-      <input id="name" type="text" placeholder="Nome completo" required class="w-full border rounded px-3 py-2"/>
-      <input id="cpf" type="text" placeholder="CPF (somente números)" required class="w-full border rounded px-3 py-2"/>
-      <input id="phone" type="tel" placeholder="+55 DDD Número" required class="w-full border rounded px-3 py-2"/>
-      <input id="email" type="email" placeholder="Email" required class="w-full border rounded px-3 py-2"/>
-      <input id="password" type="password" placeholder="Senha" required class="w-full border rounded px-3 py-2"/>
-      <select id="type" required class="w-full border rounded px-3 py-2">
-        <option value="passageiro">Sou Passageiro</option>
-        <option value="taxista">Sou Taxista</option>
-      </select>
-      <button type="submit" class="w-full bg-green-500 text-white py-2 rounded">Cadastrar</button>
-    </form>
-    <p class="text-sm text-center">Já tem conta? <a href="login.html" class="text-green-600 underline">Entrar</a></p>
-  </div>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-  <script src="app.js"></script>
-  <script src="signup.js"></script>
+<body>
+  <form id="signup-form">
+    <input type="text" id="name" placeholder="Nome" required>
+    <input type="text" id="cpf" placeholder="CPF" required>
+    <input type="text" id="phone" placeholder="Telefone" required>
+    <input type="email" id="email" placeholder="Email" required>
+    <input type="password" id="password" placeholder="Senha" required>
+    <select id="type" required>
+      <option value="passageiro">Sou Passageiro</option>
+      <option value="taxista">Sou Taxista</option>
+    </select>
+    <button type="submit">Cadastrar</button>
+  </form>
+  <p>Já tem conta? <a href="login.html">Entrar</a></p>
+  <script type="module" src="signup.js"></script>
 </body>
 </html>
